[package]
name = "pump-fun-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.14.0"
serde_json = "1.0.117"
solana-client = "1.18.14"
solana-rpc-client = "1.18.14"
solana-sdk = "1.18.14"
spl-associated-token-account = "3.0.2"
tokio = "1.37.0"
