[package]
name = "pump-fun-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.4", features = ["json"] }
serde_json = "1.0.117"
solana-client = "1.18.14"
solana-rpc-client = "1.18.14"
solana-sdk = "1.18.14"
spl-associated-token-account = "3.0.2"
tokio = "1.37.0"
serde = { version = "1.0.203", features = ["derive"] }
chrono = "0.4.38"
